# egui_console

./: .gitignore  Cargo.toml  README.md
demo/: Cargo.toml  index.html
demo/examples/: config.json  hello.rs  koto_examples.koto  script.py  theme_showcase.koto
demo/src/: app.rs  clap.rs  main.rs
src/: completion.rs  console.rs  embeddable_console.rs  koto_integration.rs  lib.rs  search.rs  syntax_highlighting.rs  tab.rs
