workspace = { members = ["demo"] }
[package]
name = "egui_console"
version = "0.2.0"
edition = "2021"
exclude = [
    ".vscode"
]
license = "MIT"
description = "A Console Window for egui"
repository = "https://github.com/pm100/egui_console"
readme = "README.md"
keywords=["egui","widget","console"]
categories=["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

eframe = "0.31.1"
egui = "0.31.1"
itertools = "0.13.0"

serde = "1.0.204"
serde_derive = "1.0.204"

# Koto scripting language integration
koto = "0.15.3"
koto_runtime = "0.15.3"
thiserror = "2.0.9"


[features]
persistence=[]





